[gd_scene load_steps=17 format=3 uid="uid://528dnv6f6mdy"]

[ext_resource type="Script" path="res://Level/level.gd" id="1_j3k2o"]
[ext_resource type="PackedScene" uid="uid://bslk2iuphjrsb" path="res://Player/Player.tscn" id="1_oxiwi"]
[ext_resource type="PackedScene" uid="uid://7f80i6fpxc52" path="res://Pipe/DoublePipe.tscn" id="2_8f002"]
[ext_resource type="PackedScene" uid="uid://cgpsnaqbdqm88" path="res://Hud/Hud.tscn" id="5_eim3k"]
[ext_resource type="Texture2D" uid="uid://dynwl2snvjsuh" path="res://Art/Background.png" id="5_gp3qt"]
[ext_resource type="Shader" path="res://Shaders/Background.gdshader" id="5_ytfh8"]
[ext_resource type="Script" path="res://Level/background.gd" id="7_3k13o"]
[ext_resource type="AudioStream" uid="uid://boguciqovsmsv" path="res://Sounds/cartoonHit.mp3" id="8_l6nr6"]
[ext_resource type="AudioStream" uid="uid://bwypcusx3jwaj" path="res://Sounds/music.mp3" id="9_t6uif"]

[sub_resource type="GDScript" id="GDScript_oy6gb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bt2m8"]
size = Vector2(50, 1)

[sub_resource type="PackedScene" id="PackedScene_nsoxu"]
_bundled = {
"conn_count": 1,
"conns": PackedInt32Array(0, 0, 14, 13, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("ScoreArea", "collision_layer", "collision_mask", "script", "Area2D", "CollisionShape2D", "shape", "ColorRect", "visible", "offset_left", "offset_right", "offset_bottom", "scale", "_on_body_entered", "body_entered"),
"node_count": 3,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 4, 0, -1, 3, 1, 0, 2, 1, 3, 2, 0, 0, 0, 5, 5, -1, 1, 6, 3, 0, 0, 0, 7, 7, -1, 5, 8, 4, 9, 5, 10, 6, 11, 7, 12, 8, 0),
"variants": [0, 2, SubResource("GDScript_oy6gb"), SubResource("RectangleShape2D_bt2m8"), false, -25.0, 13.0, 1.0, Vector2(1.32, 1)],
"version": 3
}

[sub_resource type="LabelSettings" id="LabelSettings_jwmro"]
font_size = 45

[sub_resource type="Curve2D" id="Curve2D_mnfg2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 533, 165, 0, 0, 0, 0, 533, 555)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d3y63"]
size = Vector2(480, 20)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uedbp"]
shader = ExtResource("5_ytfh8")
shader_parameter/speed = 0.01
shader_parameter/controlled_time = 0.0

[node name="Level" type="Node2D"]
script = ExtResource("1_j3k2o")
score_area = SubResource("PackedScene_nsoxu")
pipe_scene = ExtResource("2_8f002")

[node name="Player" parent="." instance=ExtResource("1_oxiwi")]
top_level = true
position = Vector2(121, 342)

[node name="ScoreLabel" type="Label" parent="."]
top_level = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 63.0
grow_horizontal = 2
text = "1"
label_settings = SubResource("LabelSettings_jwmro")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PipeSpawner" type="Path2D" parent="."]
curve = SubResource("Curve2D_mnfg2")

[node name="PipeSpawnPosition" type="PathFollow2D" parent="PipeSpawner"]
position = Vector2(533, 165)
rotation = 1.5708

[node name="UpperWall" type="RigidBody2D" parent="."]
position = Vector2(240, -46)
collision_mask = 0
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="UpperWall"]
shape = SubResource("RectangleShape2D_d3y63")

[node name="LowerWall" type="RigidBody2D" parent="."]
position = Vector2(240, 768)
collision_mask = 0
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="LowerWall"]
shape = SubResource("RectangleShape2D_d3y63")

[node name="DeathHud" parent="." instance=ExtResource("5_eim3k")]
visible = false

[node name="PipeSpawnTimer" type="Timer" parent="."]
wait_time = 2.75

[node name="Background" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_uedbp")
custom_minimum_size = Vector2(0, 720)
offset_right = 1843.2
offset_bottom = 720.0
texture = ExtResource("5_gp3qt")
expand_mode = 3
script = ExtResource("7_3k13o")

[node name="HitEffect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
top_level = true
offset_right = 480.0
offset_bottom = 720.0

[node name="CartoonGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_l6nr6")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_t6uif")
volume_db = -10.0

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="hit" from="Player" to="DeathHud" method="_on_player_hit"]
[connection signal="restart" from="DeathHud" to="." method="_on_death_hud_restart"]
[connection signal="timeout" from="PipeSpawnTimer" to="." method="_on_pipe_spawn_timer_timeout"]
